# abpl

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml
abpl-macros/: Cargo.toml
abpl-macros/src/: attributes.rs  error.rs  lib.rs
abpl-macros/src/attributes/: abpl_error.rs  abpl_provider.rs  cause.rs
scripts/: feature-matrix.sh
src/: app.rs  error.rs  future.rs  lib.rs  maybe_std.rs  providers.rs  sync.rs  thread.rs  types.rs
src/app/: axum.rs  config.rs  consts.rs  log.rs
src/tests/: app.rs  error.rs  future.rs  providers.rs  sync.rs
src/tests/app/: axum.rs  config.rs  log.rs
src/tests/thread/: cancelable.rs
src/tests/types/: hotswap_state.rs  http.rs  maybe_borrowed.rs
src/thread/: cancelable.rs
src/types/: encoding.rs  hotswap_state.rs  http.rs  maybe_borrowed.rs
src/types/encoding/: base64.rs
