[workspace]
members = [".", "abpl-macros"]

[package]
name = "abpl"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-Caraneer-Proprietary"

[dependencies]
abpl-macros = { path = "./abpl-macros", optional = true}
tracing = "0.1.44"
serde = { version = "1.0.228", optional = true }
serde_with = {version = "3.15.1", optional = true }
bytes = {version = "1.12.0", optional = true }
base64 = {version = "0.22.1", optional = true }

utoipa = { version = "5.4.0", optional = true }
serde_json = { version = "1.0.150", optional = true }
http = { version = "1.4.2", optional = true }
indenter = { version = "0.3.4", optional = true }



[features]
# A newtype for byte arrays to be (de)serialized as base64
newtype_base64 = ["serde", "bytes", "base64"]
serde = ["dep:serde", "serde/derive", "serde/rc", "dep:serde_with"]

# Derive error serde stuff
derive_error = ["abpl-macros", "indenter"]

default = ["std"]

# currently disabling this brakes things
std = []


# automagic app lifecycle management
app = []

# Thread utilities, currently includes a cancelable sleep
thread = [ "sync" ]

# Sync utilities, like mithridate
sync = []

[dev-dependencies]
serde_json = { version = "1.0.150" }

# lazy-regex = "3.4.1"
# thiserror = "2.0.17"
# chrono = "0.4.42"
# mace-common-macros = { path = "./common-macros" }

# serde_json = "1.0.145"
# 
# toml = "0.9.8"

# bytemuck = { version = "1.25.0", features = ["derive"] }
# array-macro = "2.1.8"
# url = { version = "2.5.7", features = ["serde"] }

# constcat = "0.6.1"
# ulid = "1.2.1"
# const-hex = "1.17.0"
# futures = {version = "0.3.31"}
# tower-service = "0.3.3"
# axum = { version = "0.8.9", default-features = false, features = ["json", "tokio", "http1"] }
# tokio = "1.48.0"
# jsonwebtoken = "10.4.0"

# aes-gcm = "0.11.0-rc.4"
# ciborium = "0.2.2"
# ciborium-io = "0.2.2"
# form_urlencoded = "1.2.2"
# ring  = "0.17.14"
# axum-extra = {version = "0.12.6", features = ["cookie"]}
# signal-hook = "0.4.4"
# libc = "0.2.177"
# utoipa = { version = "5.4.0" }
# rand = "0.10.1"
# hmac = "0.13.0"
# sha2 = "0.11.0"
# http = "1.3.1"
# ahash = {version = "0.8.12", features = ["serde"]}

# [target.'cfg(target_os = "linux")'.dependencies]
# sd-notify = "0.4.5"
