[package]
name = "abpl-macros"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ARitz-Cracker/abpl"
description = "Procedural macro support crate for abpl's #[derive(Error)] error type generator."
keywords = ["derive", "macro", "error-handling"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "3", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
convert_case = "0.11.0"
